--- a/events-api/pom.xml
+++ b/events-api/pom.xml
@@ -15,7 +15,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.projectreactor</groupId>
