--- a/schema-store-api/pom.xml
+++ b/schema-store-api/pom.xml
@@ -8,7 +8,6 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store-api</artifactId>
-   <version>0.3.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
@@ -24,7 +23,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <!--<dependency>-->
       <!--<groupId>org.springframework.cloud</groupId>-->
@@ -33,7 +32,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
    </dependencies>
 </project>
