--- a/schema-store/pom.xml
+++ b/schema-store/pom.xml
@@ -8,18 +8,17 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store</artifactId>
-   <version>0.3.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
