--- a/vyne-client-spring/pom.xml
+++ b/vyne-client-spring/pom.xml
@@ -14,7 +14,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-client</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
