--- a/vyne-client/pom.xml
+++ b/vyne-client/pom.xml
@@ -18,7 +18,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-query-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
