--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -29,7 +29,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>utils</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.apache.commons</groupId>
