--- a/vyne-query-api/pom.xml
+++ b/vyne-query-api/pom.xml
@@ -15,7 +15,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
