--- a/vyne-search/pom.xml
+++ b/vyne-search/pom.xml
@@ -34,17 +34,17 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>events-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>utils</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
