--- a/vyne-spring-schemaStore/pom.xml
+++ b/vyne-spring-schemaStore/pom.xml
@@ -8,18 +8,17 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring-schemaStore</artifactId>
-   <version>0.3.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
    </dependencies>
 </project>
