--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -8,7 +8,6 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring</artifactId>
-   <version>0.3.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
@@ -24,7 +23,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
@@ -37,7 +36,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-client</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
@@ -63,7 +62,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.3.0-SNAPSHOT</version>
+         <version>${project.version}</version>
       </dependency>
       <dependency>
          <groupId>com.hazelcast</groupId>
