This is a combination of 2 commits.
Spike on projection heuristics

--- a/vyne-query-service/src/main/resources/application-persist-query-history.yml
+++ b/vyne-query-service/src/main/resources/application-persist-query-history.yml
@@ -9,3 +9,7 @@ spring:
       url: r2dbc:postgresql://localhost/vyne-query
       username: ${spring.flyway.user}
       password: ${spring.flyway.password}
+
+app:
+   query-history:
+      enabled: true
