--- a/vyne-query-service/src/main/resources/application-inmemory-query-history.yml
+++ b/vyne-query-service/src/main/resources/application-inmemory-query-history.yml
@@ -1,3 +1,3 @@
-spring:
-   autoconfigure:
-      exclude: org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+app:
+   query-history:
+      enabled: true
