--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build-jvm:
         - .m2/repository
      key: "maven-$CI_COMMIT_REF_SLUG"
   script:
+    - 'if [ -z "${GL_TOKEN}" ]; then echo "var is blank"; else echo "var is set"; fi'
     - 'if [ -z "${GITLAB_TOKEN}" ]; then echo "var is blank"; else echo "var is set"; fi'
     - 'if [ -z "${CI_SERVER_HOST}" ]; then echo "var is blank"; else echo "var is set"; fi'
     - 'if [ -z "${CI_PROJECT_PATH}" ]; then echo "var is blank"; else echo "var is set"; fi'
