--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,11 +98,11 @@ release-minor:
 
 release-patch:
    variables:
-      GIT_STRATEGY: none
+      GIT_STRATEGY: clone
 
    dependencies: []
    image: maven:3.3.9-jdk-8
-   stage: release
+   stage: build
    script:
       - 'if [ -z "${GITLAB_TOKEN}" ]; then echo "var is blank"; else echo "var is set"; fi'
       - 'if [ -z "${CI_SERVER_HOST}" ]; then echo "var is blank"; else echo "var is set"; fi'
