--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,10 +99,9 @@ release-minor:
 release-patch:
    variables:
       GIT_STRATEGY: clone
-
    dependencies: []
    image: maven:3.3.9-jdk-8
-   stage: build
+   stage: release
    script:
       - 'if [ -z "${GITLAB_TOKEN}" ]; then echo "var is blank"; else echo "var is set"; fi'
       - 'if [ -z "${CI_SERVER_HOST}" ]; then echo "var is blank"; else echo "var is set"; fi'
