Fixing failing tests, fixing typescript errors, Added @JsonIgnore to ignore sources in query responses

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -92,6 +92,19 @@
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.skyscreamer</groupId>
+         <artifactId>jsonassert</artifactId>
+         <version>1.5.0</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
