LENS-186 Added spring config server module. Added bootstrap.yml config to all the apps with spring.cloud.config.enabled set to false

--- a/pipelines/pipelines-orchestrator/pom.xml
+++ b/pipelines/pipelines-orchestrator/pom.xml
@@ -25,6 +25,10 @@
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-config</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>pipelines-orchestrator-api</artifactId>
          <version>${project.version}</version>
