--- a/pipelines/pipeline-runner-app/pom.xml
+++ b/pipelines/pipeline-runner-app/pom.xml
@@ -25,6 +25,11 @@
       </dependency>
 
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-config</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
          <version>${project.version}</version>
