--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
    <modules>
       <module>cask</module>
+      <module>config-server</module>
       <module>eureka</module>
       <module>vyne-core-types</module>
       <module>events-api</module>
