--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -71,6 +71,10 @@
          <artifactId>spring-boot-starter-data-r2dbc</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-config</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.data</groupId>
          <artifactId>spring-data-r2dbc</artifactId>
          <version>1.1.1.RELEASE</version>
