Fixed missing configuration name refactorings

--- a/vyne-query-service/src/main/resources/application-persist-query-history.yml
+++ b/vyne-query-service/src/main/resources/application-persist-query-history.yml
@@ -10,6 +10,6 @@ spring:
       username: ${spring.flyway.user}
       password: ${spring.flyway.password}
 
-app:
+vyne:
    query-history:
       enabled: true
