--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -35,6 +35,8 @@
     "@ng-select/ng-select": "^3.7.3",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
     "highlight.js": "^9.17.1",
