--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
 server:
   port: 8800
 
+cask:
+   maxTextMessageBufferSize: 1048576 # 1024 * 1024
+   maxBinaryMessageBufferSize: 1048576 # 1024 * 1024
+
 # Actuators + prometheus metrics configuration
 management:
    endpoint:
