LENS-187 Vyne Cask ui

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -15,7 +15,11 @@
          <artifactId>vyne-search</artifactId>
          <version>${project.version}</version>
       </dependency>
-
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>cask-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-query-api</artifactId>
