--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -25,5 +25,13 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
+       <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+       </dependency>
+       <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-openfeign-core</artifactId>
+       </dependency>
     </dependencies>
 </project>
