--- a/pipelines/pipelines-orchestrator/pom.xml
+++ b/pipelines/pipelines-orchestrator/pom.xml
@@ -13,6 +13,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>pipelines-orchestrator-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>com.fasterxml.jackson.module</groupId>
          <artifactId>jackson-module-kotlin</artifactId>
       </dependency>
@@ -41,7 +46,14 @@
          <groupId>net.logstash.logback</groupId>
          <artifactId>logstash-logback-encoder</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>io.springfox</groupId>
+         <artifactId>springfox-swagger2</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.springfox</groupId>
+         <artifactId>springfox-swagger-ui</artifactId>
+      </dependency>
       <dependency>
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
@@ -97,5 +109,7 @@
          </plugin>
 
       </plugins>
+
    </build>
+
 </project>
