--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -1,11 +1,36 @@
+server:
+   port: 8800
+
+spring.datasource:
+   url: "jdbc:postgresql://localhost:5432/vynedb"
+   username: "vynedb"
+   password: "vynedb"
+
 spring:
    main:
       web-application-type: reactive
    application:
       name: cask
+   flyway:
+      url: ${spring.datasource.url}
+      user: ${spring.datasource.username}
+      password: ${spring.datasource.password}
+      enabled: true
+      locations: classpath:db/migration
 
-server:
-  port: 8800
+eureka:
+   uri: http://127.0.0.1:9022
+   client:
+      registryFetchIntervalSeconds: 1
+      initialInstanceInfoReplicationIntervalSeconds: 5
+      serviceUrl:
+         defaultZone: ${eureka.uri}/eureka/
+   instance:
+      leaseRenewalIntervalInSeconds: 2
+      leaseExpirationDurationInSeconds: 5
+
+vyne:
+   queryServiceUrl: http://query-service
 
 cask:
    maxTextMessageBufferSize: 1048576 # 1024 * 1024
