--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ publish-snapshot:
   stage: deploy
   script:
     - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
-    - 'mvn $MAVEN_CLI_OPTS -DskipTests -Dskip.npm deploy -P snapshot-release' # Skip UI and tests. Already there from previous stages and artifacts
+    - 'mvn $MAVEN_CLI_OPTS -DskipTests -Dskip.npm deploy -DbuildNumber=$CI_BUILD_ID -P snapshot-release' # Skip UI and tests. Already there from previous stages and artifacts
   only:
     - develop
 
