--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -22,7 +22,7 @@
     "@angular/compiler": "^8.2.9",
     "@angular/core": "^8.2.9",
     "@angular/forms": "^8.2.9",
-    "@angular/http": "^7.2.10",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.5",
     "@angular/platform-browser": "^8.2.9",
     "@angular/platform-browser-dynamic": "^8.2.9",
@@ -37,6 +37,7 @@
     "@types/angular": "^1.7.0",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
+    "file-saver": "^2.0.2",
     "highlight.js": "^9.17.1",
     "http-status-codes": "^1.3.0",
     "immutable": "^3.8.2",
