--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -91,8 +91,8 @@
                      <build>
                         <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                         <tags>
-                           <!-- defined in profiles.  see root pom.xml -->
-                           <tag>${docker.tag}</tag>
+                           <tag>${docker.tag.latest}</tag>
+                           <tag>${docker.tag.numbered}</tag>
                         </tags>
                      </build>
                   </image>
