--- a/file-schema-server/src/main/resources/application.yml
+++ b/file-schema-server/src/main/resources/application.yml
@@ -17,6 +17,17 @@ vyne:
    schema:
       name: ${spring.application.name}
       version: 0.1.0
+      publicationMethod: REMOTE
+      pollInterval: 5s
+      publishRetryInterval: 3s
+
+feign:
+   client:
+      config:
+         default:
+            connectTimeout: 5000
+            readTimeout: 5000
+
 server:
    port: 9301
 
