--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -29,3 +29,7 @@ eureka:
 
 vyne:
    queryServiceUrl: http://query-service
+   schema:
+        publicationmethod: REMOTE
+        pollInterval: 5s
+        publishRetryInterval: 3s
