--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -17,6 +17,9 @@ vyne:
    data-lineage:
       remoteCalls:
          enabled: false
+   schema:
+      publicationMethod: LOCAL # this exposes in memory schema store via http API, use only in Vyne settings
+      pollInterval: 5s
 
 logging:
    level:
