--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -81,13 +81,18 @@
           <artifactId>vyne-client-spring</artifactId>
           <version>${project.version}</version>
        </dependency>
-
-        <dependency>
-            <groupId>de.bytefish</groupId>
-            <artifactId>pgbulkinsert</artifactId>
-            <version>3.8</version>
-        </dependency>
-
+       <dependency>
+          <groupId>de.bytefish.pgbulkinsert</groupId>
+          <artifactId>pgbulkinsert-core</artifactId>
+          <version>7.0.1</version>
+          <classifier>jdk8</classifier>
+       </dependency>
+       <dependency>
+          <groupId>de.bytefish.pgbulkinsert</groupId>
+          <artifactId>pgbulkinsert-rowwriter</artifactId>
+          <version>7.0.1</version>
+          <classifier>jdk8</classifier>
+       </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
