--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <groupId>io.vyne</groupId>
    <artifactId>platform</artifactId>
    <packaging>pom</packaging>
-   <version>0.4.2-SNAPSHOT</version>
+   <version>0.5.0-SNAPSHOT</version>
 
    <parent>
       <groupId>org.springframework.boot</groupId>
@@ -16,7 +16,7 @@
 
 
    <properties>
-      <taxi.version>0.6.1-SNAPSHOT</taxi.version>
+      <taxi.version>0.6.2</taxi.version>
 
       <!-- Used in QueryService -->
       <elasticsearch.version>7.5.2</elasticsearch.version>
