Lens 218 update cask service definitions

--- a/file-schema-server/src/main/resources/application.yml
+++ b/file-schema-server/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 taxi:
    schema-local-storage: /path/to/taxonomy
+   schema-recompile-interval-seconds: 3
+
 spring:
    application:
       name: file-schema-server
