LENS-241 making feign service names configurable for query-service, cask, pipeline-runner and pipelines-orchestrator

--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -28,7 +28,9 @@ eureka:
       leaseExpirationDurationInSeconds: 5
 
 vyne:
-   queryServiceUrl: http://query-service
+   queryService:
+      name: query-service
+   queryServiceUrl: http://${vyne.queryService.name}
    schema:
         publicationmethod: REMOTE
         pollInterval: 5s
