--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -30,7 +30,9 @@ eureka:
       leaseExpirationDurationInSeconds: 5
 
 vyne:
-   queryServiceUrl: http://query-service
+   queryService:
+      name: query-service
+   queryServiceUrl: http://${vyne.queryService.name}
    schema:
       publicationMethod: REMOTE
       pollInterval: 5s
