--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -27,11 +27,12 @@
     "@angular/platform-browser": "^8.2.9",
     "@angular/platform-browser-dynamic": "^8.2.9",
     "@angular/platform-server": "^8.2.9",
+    "@materia-ui/ngx-monaco-editor": "^4.0.0",
     "@angular/router": "^8.2.9",
     "@covalent/core": "^2.0.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
-    "@materia-ui/ngx-monaco-editor": "^2.0.7",
+    "ngx-monaco-editor": "^8.1.1",
     "@ng-select/ng-select": "^3.7.3",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
@@ -46,7 +47,8 @@
     "install": "^0.13.0",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.15.6",
+    "monaco-editor": "^0.18.1",
+    "monaco-languageclient": "^0.10.2",
     "ngx-file-drop": "^6.0.1",
     "ngx-highlightjs": "^4.0.0",
     "ngx-markdown": "^8.2.2",
@@ -61,9 +63,11 @@
     "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
+    "vscode-ws-jsonrpc": "^0.1.1",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "8.4.1",
     "@angular-devkit/build-angular": "^0.800.0",
     "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "^8.2.9",
