--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -54,6 +54,10 @@
          <artifactId>logstash-logback-encoder</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.eclipse.jgit</groupId>
          <artifactId>org.eclipse.jgit</artifactId>
          <version>5.7.0.202003110725-r</version>
