--- a/pipelines/pipelines-orchestrator/pom.xml
+++ b/pipelines/pipelines-orchestrator/pom.xml
@@ -55,6 +55,10 @@
          <artifactId>springfox-swagger-ui</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+      <dependency>
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
          <version>2.2.0</version>
