--- a/cask/docker-compose.yml
+++ b/cask/docker-compose.yml
@@ -7,9 +7,10 @@ services:
          - POSTGRES_PASSWORD=vynedb
          - POSTGRES_DB=vynedb
          - POSTGRES_EXTRA_DATABASES="vyne-query" # comma-separated list of databases
+         - PGDATA=/cask/data/
       volumes:
          # persist data even if container shuts down
-         - database-data:/var/lib/postgresql/data/
+         - database-data:/cask/data/
          # creates extra databases defined in POSTGRES_EXTRA_DATABASES, the user is the same
          - ./create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
       ports:
