--- a/schema-store-client/pom.xml
+++ b/schema-store-client/pom.xml
@@ -38,11 +38,16 @@
       <dependency>
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
-         <version>3.0.7.RELEASE</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.retry</groupId>
          <artifactId>spring-retry</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+         <scope>provided</scope>
+         <optional>true</optional>
       </dependency>
 
       <dependency>
