Temporal type casting

--- a/pipelines/pipelines-orchestrator/src/test/resources/application-test.yml
+++ b/pipelines/pipelines-orchestrator/src/test/resources/application-test.yml
@@ -21,7 +21,8 @@ vyne:
          output:
             type: imdb.Actor
             transport:
-               props: {}
+               props:
+                  foo: bar
                targetType: imdb.Actor
                type: "cask"
                direction: OUTPUT
