--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>platform</artifactId>
-      <version>0.6.1</version>
+      <version>0.6.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
