--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -32,6 +32,7 @@
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
     "@materia-ui/ngx-monaco-editor": "^2.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
