feat: cask-views introduce views through config against casks
LENS-267

--- a/cask/src/test/resources/application-test.yml
+++ b/cask/src/test/resources/application-test.yml
@@ -3,3 +3,4 @@ spring:
       url: "jdbc:postgresql://localhost:6662/postgres"
       user: postgres
       password: postgres
+      validate-on-migrate: false
