Reenable cask integration test

--- a/cask/src/test/resources/application-test.yml
+++ b/cask/src/test/resources/application-test.yml
@@ -1,4 +1,9 @@
 spring:
+   datasource:
+      url: "jdbc:postgresql://localhost:6662/postgres"
+      username: "postgres"
+      password: "postgres"
+
    flyway:
       url: "jdbc:postgresql://localhost:6662/postgres"
       user: postgres
